# fast_zero

./: .env.sample  pyproject.toml
fast_zero/: app.py
temporal/: run_worker.py
temporal/activities/: say_hello.py  sync_payments_activity.py
temporal/schedulers/: sync_payments_scheduler.py
temporal/workflows/: greeting_workflow.py  sync_payments_workflow.py
temporalio/: run_worker.py
